--- a/frontend/search.html
+++ b/frontend/search.html
@@ -17,22 +17,22 @@
             
             <h1>Results</h1>
             <label class="checkmarkContainer">
-                Rift/Rift S
+                <div>Rift/Rift S</div>
                 <input id="rift" type='checkbox' onclick='Update()'>
                 <span class="checkmark"></span>
             </label>
             <label class="checkmarkContainer">
-                Quest 1/2/Pro
+                <div>Quest 1/2/Pro</div>
                 <input id="monterey" type='checkbox' onclick='Update()'>
                 <span class="checkmark"></span>
             </label>
             <label class="checkmarkContainer">
-                GearVR
+                <div>GearVR</div>
                 <input id="gearvr" type='checkbox' onclick='Update()'>
                 <span class="checkmark"></span>
             </label>
             <label class="checkmarkContainer">
-                Go
+                <div>Go</div>
                 <input id="pacific" type='checkbox' onclick='Update()'>
                 <span class="checkmark"></span>
             </label>
