update QAVS guide: remove select app step as it gets auto selected now, use meta instead of facebook account

--- a/frontend/guidequest_QAVS.html
+++ b/frontend/guidequest_QAVS.html
@@ -23,12 +23,12 @@
             After setting up SideQuest search for <code>QuestAppVersionSwitcher</code> and install it to your headset.
 
             <h3>3. Set up QuestAppVersionSwitcher</h3>
-            In order to downgrade games you have to log in to your Facebook account on QuestAppVersionSwitcher.
+            In order to downgrade games you have to log in to your Meta account on QuestAppVersionSwitcher.
             To do that open QuestAppVersionSwitcher (from the unknown sources menu in your Quest) and allow the storage permission.
             
             <br>
             Open the <code>Tools & Options</code> tab in QuestAppVersionSwitcher and press the Login button.
-            Log in to your Facebook account like you would normally.<br>
+            Log in to your Meta account like you would normally.<br>
             <br>
             <b>QuestAppVersionSwitcher is white when you open it?</b>
             <br>
@@ -53,18 +53,6 @@
             You can then restore the app data by selecting it in the list above and pressing restore
 
             <h4>6. Install the Downgraded game</h4>
-            <h5>6.1 Select the right app</h5>
-            <b>After</b> the download finished, go to the <code>Backups</code> tab in QuestAppVersionSwitcher and press the <code>Change app</code> button at the top to select the app you downgraded.
-            <br>
-            <b>Unsure what to select? Type the games name into this box and hit the Show me the name button</b>
-            <br>
-            <div id="games">
-                <input type="text" placeholder="Game name" id="game">
-                <input type="button" value="Show me the name" onclick="SearchGame()">
-                <div class="textbox" id="text"></div>
-            </div>
-            <div id="res"></div>
-            <h5>6.2 Install the game</h5>
             From the list of backups select the version you just downloaded. Click the <code>Restore button</code> and follow the provided steps.
 
             <h4>7. Have fun</h4>
