--- a/frontend/id.html
+++ b/frontend/id.html
@@ -56,6 +56,7 @@
                 <tr><td class="label">OculusDB Type</td><td id="type">Fetching...</td></tr>
                 <tr><td class="label">Last Updated</td><td id="lastUpdated">Fetching...</td></tr>
             </table>
+            <input type="button" value="Force Scrape" onmousedown="MouseDown(event)" onmouseup="if(MouseUp(event)) location = '/utils?id=' + id">
         </div>
         <script src="/script.js"></script>
         <script>
