Update Discord Username

--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -12,7 +12,7 @@
     <div class="content">
         <h2>Recent Activity</h2>
         <h3>Want to get these updates on your Discord server?</h3>
-        Hit me up on Discord <code>ComputerElite#0486</code>. I will add you once you messaged me.
+        Hit me up on Discord <code>@computerelite</code>. I will add you once you messaged me.
         <label class="checkmarkContainer">
             Show Updates
             <input id="vers" type='checkbox' onclick='Update()'>
