Scraping should be working now as is, testing will be done at a later time when the monitoring systems are in a 'most likely working TM' state

--- a/frontend/activity.html
+++ b/frontend/activity.html
@@ -12,7 +12,7 @@
         <div class="content">
             <div>
                 <h2>Selected Activity</h2>
-                <input type="button" value="Go to last entry" onmousedown="MouseDown(event)" onmouseup="if(MouseUp(event)) OpenLastActivity()">
+                <input type="button" value="Go to previous entry" onmousedown="MouseDown(event)" onmouseup="if(MouseUp(event)) OpenLastActivity()">
                 <br>
                 <div id="this"><div class="loader"></div></div>
             </div>
