--- a/frontend/server.html
+++ b/frontend/server.html
@@ -67,14 +67,11 @@
             fetch("/api/v1/database").then(res => res.json().then(res => {
                 document.getElementById("db").innerHTML = `
                 <table>
-                    <tr><td class="label">Last Database update</td><td class="value">${new Date(res.lastUpdated).toLocaleString()}</td></tr>
-                    <tr><td class="label">Start of current Database update</td><td class="value">${new Date(res.currentUpdateStart).toLocaleString()}</td></tr>
                     <tr><td class="label">Data entries</td><td class="value">${res.dataDocuments}</td></tr>
                     <tr><td class="label">Activity entries</td><td class="value">${res.activityDocuments}</td></tr>
                     <tr><td class="label">Apps recognized by OculusDB</td><td class="value">${res.appsToScrape}</td></tr>
-                    <tr><td class="label">Current database update scraped apps (may not be accurate)</td><td class="value">${res.scrapedApps}</td></tr>
-                    <tr><td class="label">Scraping Status</td><td class="value">${res.scrapingStatusString}</td></tr>
                 </table>`
+                document.getElementById("scrapingStatusPageUrl").href = res.scrapingStatusPageUrl
             }))
 
             function InsertString(toInsert, position, text) {
