--- a/frontend/scrapingMaster.html
+++ b/frontend/scrapingMaster.html
@@ -14,6 +14,7 @@
 <body>
 <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
 <div class="content">
+    <a href="/setup">Setup a scraping node</a>
     <table id="status">
         
         
