Fix app count on server page

--- a/frontend/server.html
+++ b/frontend/server.html
@@ -69,7 +69,7 @@
                 <table>
                     <tr><td class="label">Data entries</td><td class="value">${res.dataDocuments}</td></tr>
                     <tr><td class="label">Activity entries</td><td class="value">${res.activityDocuments}</td></tr>
-                    <tr><td class="label">Apps recognized by OculusDB</td><td class="value">${res.appsToScrape}</td></tr>
+                    <tr><td class="label">Apps recognized by OculusDB</td><td class="value">${res.appCount}</td></tr>
                 </table>`
                 document.getElementById("scrapingStatusPageUrl").href = res.scrapingStatusPageUrl
             }))
