Stop nodes from updating in 2 seperate threads thus crashing the node, Fix frontned requesting application specific html 2 times

--- a/frontend/scrapingMaster.html
+++ b/frontend/scrapingMaster.html
@@ -102,7 +102,7 @@
                 <td class="tableBorderRight">
                     <div class="searchResults">
                         <div>${node.runtime.split(".")[0]}</div>
-                        <div>${node.totalRuntime.split(".")[0]} (total runtime)</div>
+                        <div>${node.totalRuntime.split(".").} (total runtime)</div>
                         <div>${GetTimeDiff(node.lastHeartBeat)} ago (last heartbeat)</div>
                         <div>${GetTimeDiff(node.lastRestart)} ago (last restart)</div>
                         <div>${GetTimeDiff(node.firstSight)} ago (first sight)</div>
