change stuff for activity

--- a/frontend/scrapingMaster.html
+++ b/frontend/scrapingMaster.html
@@ -94,6 +94,7 @@
                     <div class="searchResults">
                         <div>${node.scrapingNode.scrapingNodeName}</div>
                         <code>${node.scrapingNode.scrapingNodeId}</code>
+                        <div>${node.scrapingNode.currency}</div>
                     </div>
                 </td>
                 <td>${node.scrapingNode.scrapingNodeVersion}</td>
