--- a/frontend/search.html
+++ b/frontend/search.html
@@ -66,7 +66,7 @@
 
             function AddApp() {
                 var appId = document.getElementById("addApp").value
-                TextBoxText("reportmissingbox", "Waiting for repsponse")
+                TextBoxText("reportmissingbox", "Waiting for response")
                 fetch(`/api/v1/reportmissing/${appId}`).then(res => {
                     res.text().then(text => {
                         if(res.status == 200) {
