Add ActivityApplicationUpdated (UI untested)

--- a/frontend/recentactivity.html
+++ b/frontend/recentactivity.html
@@ -19,7 +19,7 @@
             <span class="checkmark"></span>
         </label>
         <label class="checkmarkContainer">
-            Show new Applications
+            Show Applications
             <input id="apps" type='checkbox' onclick='Update()'>
             <span class="checkmark"></span>
         </label>
@@ -57,7 +57,8 @@
                     "ActivityNewVersion"
                 ],
                 "apps": [
-                    "ActivityNewApplication"
+                    "ActivityNewApplication",
+                    "ActivityApplicationUpdated"
                 ],
                 "price": [
                     "ActivityPriceChanged"
