--- a/frontend/home.html
+++ b/frontend/home.html
@@ -19,7 +19,7 @@
                 </div>
                 <h2>Welcome to Oculus DB</h2>
                 <h5><i>An Oculus exploring and monitoring service</i></h5>
-                OculusDB monitores the entirety of Oculus with it's own database which gets completly updated about every 6 hours (estimate)
+                OculusDB monitors the entirety of Oculus with it's own database which gets regularly updated.
                 <br>
                 <h3>Database info</h3>
                 All dates you'll see on this site will be in your timezone.
@@ -28,7 +28,7 @@
                 <h3>Download info</h3>
                 <b>Downloads</b> may <b>only work</b> if you are <b>logged in on <a href="{oculusloginlink}">{oculusloginlink}</a></b> with your Oculus Account which owns the game you want to download.
                 <h3>Project info</h3>
-                OculusDB is always in development. You can check the ToDo list <a href="https://github.com/ComputerElite/OculusDB/projects/1">here</a>.
+                OculusDB is always in development. You can find the source code on <a href="https://github.com/ComputerElite/OculusDB">GitHub</a>.
                 <br>
                 If you got any requests for what to add to OculusDB or feedback about the website itself feel free to tell me <a href="https://github.com/ComputerElite/OculusDB/issues">via GitHub Issues</a> or the <a href="{OculusDBDC}">OculusDB Discord Server</a>.
                 <br>
