checkout submodules and update download stats page

--- a/OculusDB/frontend/downloadstats.html
+++ b/OculusDB/frontend/downloadstats.html
@@ -12,6 +12,8 @@
     <div class="content">
         <h2>Download stats</h2>
         Download stats <b>only</b> include downloads made with OculusDB.
+        <br>
+        <i>Download counts indicate the presses of the download button, <b>not</b> successful downloads. They are also just estimates.</i>
         <div id="activity">
             <div class="loader"></div>
         </div>
