Do shit some friend wanted me to do do. Less tracking basically or something like that. I didn't test. I am too dumb to deploy on localhost cause I'm on windows rn. Please help. My Ubuntu ethernet and wifi don't work. They literally aren't even there, well, wifi is partially. I need help. Ìf someone reads this. Hit me up!

--- a/OculusDB/frontend/privacy.html
+++ b/OculusDB/frontend/privacy.html
@@ -14,7 +14,7 @@
                 <h2>General</h2>
                 This document will tell you which data may get collected when you visit and use this site.
                 <h2>Logging by this site</h2>
-                This page is self-hosted. Following data may be collected by accessing it:
+                This page is self-hosted on <a href="https://www.oracle.com/legal/privacy/privacy-policy.html">Oracle</a>. Following data may be collected by accessing it:
                 <br>
                 <br>
                 - Your IP address
