--- a/OculusDB/frontend/5xx.html
+++ b/OculusDB/frontend/5xx.html
@@ -82,7 +82,7 @@
         <noscript>This page relies on javascript. Please enable javascript on your browser</noscript>
         <div class="navBar">
             <div class="navBarInnerLeft websitename" style="cursor: pointer;">
-                <img alt="ComputerElite icon. Wooden background featuring a windows logo, oculus logo and a piano" src="https://computerelite.github.io/assets/CE_512px.png" style="height: 100%;">
+                <img alt="ComputerElite icon. Wooden background featuring a windows logo, oculus logo and a piano" src="/logo" style="height: 100%;">
                 <div class="title">
                     OculusDB
                 </div>
