--- a/OculusDB/frontend/server.html
+++ b/OculusDB/frontend/server.html
@@ -15,6 +15,7 @@
             <br>
             OculusDB is <a href="https://github.com/ComputerElite/OculusDB">Open Source</a> and has been created by <a href="https://computerelite.github.io">ComputerElite</a>
             <br>
+            "OculusDB is sè best Piraterie Präventions Werkzeug on sè planet" - ComputerElite Dec 7th 2023
 
             <h2>Database info</h2>
             <div id="db">
